// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> ControlledWithinMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1m:"
      >
        <span
          class="text text--label-md"
        >
          Test Label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class=""
        >
          17
        </span>
         
        / 
        30
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1o:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1o:"
        aria-invalid="false"
        class="input"
        id=":r1m:"
        maxlength="30"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> DateHandling story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r14:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r14:"
        type="date"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r0:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r0:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Disabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        aria-disabled="true"
        class="label label--md label--disabled input-field__label input-field__label--disabled"
        for=":rl:"
      >
        <span
          class="text text--label-md"
        >
          Disabled input field
        </span>
      </label>
      <div
        class="input-field__subLabel input-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":rn:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rn: :rm:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":rl:"
        type="text"
        value="Text in disabled field"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled"
        id=":rm:"
      >
        <span
          class="text text--body-sm"
        >
          This InputField is disabled
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Error story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rc:"
      >
        <span
          class="text text--label-md"
        >
          Error input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":re:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":re: :rd:"
        aria-invalid="true"
        class="input error"
        id=":rc:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":rd:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          This is a fieldnote with an error.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> InputWithin story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1d:"
      >
        <span
          class="text text--label-md"
        >
          Input field with button inside
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input input-field__input--input-within"
        id=":r1d:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="button button--layout-none button--secondary button--sm button--size-sm button--variant-default"
          type="button"
        >
          <span
            class="text text--label-sm button__text"
          >
            Copy
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LeadingIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":rq:"
        aria-invalid="false"
        aria-label="search field"
        class="input input-field__input--leading-icon"
        id=":ro:"
        placeholder="Search..."
        type="text"
      />
      <div
        class="input-field__leading-icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.5423 20.577L13.2616 14.296C12.7616 14.7088 12.1866 15.0319 11.5366 15.2653C10.8866 15.4986 10.2141 15.6153 9.5193 15.6153C7.81164 15.6153 6.36547 15.023 5.1808 13.8385C3.9963 12.6538 3.40405 11.2077 3.40405 9.50002C3.40405 7.79235 3.9963 6.34618 5.1808 5.16152C6.36547 3.97702 7.81164 3.38477 9.5193 3.38477C11.227 3.38477 12.6731 3.97702 13.8578 5.16152C15.0423 6.34618 15.6346 7.79235 15.6346 9.50002C15.6346 10.2142 15.5147 10.8963 15.2751 11.5463C15.0352 12.1963 14.7153 12.7616 14.3153 13.2423L20.5961 19.523L19.5423 20.577ZM9.5193 14.1155C10.8078 14.1155 11.8991 13.6683 12.7933 12.774C13.6876 11.8798 14.1348 10.7885 14.1348 9.50002C14.1348 8.21152 13.6876 7.12018 12.7933 6.22601C11.8991 5.33168 10.8078 4.88452 9.5193 4.88452C8.2308 4.88452 7.13947 5.33168 6.2453 6.22601C5.35097 7.12018 4.9038 8.21152 4.9038 9.50002C4.9038 10.7885 5.35097 11.8798 6.2453 12.774C7.13947 13.6683 8.2308 14.1155 9.5193 14.1155Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> LongInputWithin story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div>
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1g:"
      >
        <span
          class="text text--label-md"
        >
          Input field with button inside
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input input-field__input--input-within"
        id=":r1g:"
        type="text"
      />
      <div
        class="input-field__input-within"
      >
        <button
          class="button button--layout-left button--secondary button--sm button--size-sm button--variant-default"
          type="button"
        >
          <span
            class="text text--label-sm button__text"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="16px"
              style="--icon-size: 16px;"
              viewBox="0 0 24 24"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.30775 20.5C4.80258 20.5 4.375 20.325 4.025 19.975C3.675 19.625 3.5 19.1974 3.5 18.6923V5.30775C3.5 4.80258 3.675 4.375 4.025 4.025C4.375 3.675 4.80258 3.5 5.30775 3.5H11.6152V5H5.30775C5.23075 5 5.16025 5.03208 5.09625 5.09625C5.03208 5.16025 5 5.23075 5 5.30775V18.6923C5 18.7693 5.03208 18.8398 5.09625 18.9038C5.16025 18.9679 5.23075 19 5.30775 19H18.6923C18.7693 19 18.8398 18.9679 18.9038 18.9038C18.9679 18.8398 19 18.7693 19 18.6923V12.3848H20.5V18.6923C20.5 19.1974 20.325 19.625 19.975 19.975C19.625 20.325 19.1974 20.5 18.6923 20.5H5.30775ZM9.71925 15.3345L8.6655 14.2808L17.9462 5H14V3.5H20.5V10H19V6.05375L9.71925 15.3345Z"
              />
            </svg>
            Button with extra text
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoFieldnote story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r9:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rb:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":rb:"
        aria-invalid="false"
        class="input"
        id=":r9:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline input-field__overline--no-label"
    />
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r13: :r12:"
        aria-invalid="false"
        aria-label="Input for no visible label"
        class="input"
        id=":r11:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r12:"
      >
        <span
          class="text text--body-sm"
        >
          This input field has no visible label
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> ReadOnly story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":ri:"
      >
        <span
          class="text text--label-md"
        >
          Read-only field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rk:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rk: :rj:"
        aria-invalid="false"
        class="input"
        id=":ri:"
        readonly=""
        type="text"
        value="some read-only information"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":rj:"
      >
        <span
          class="text text--body-sm"
        >
          This will show up like text, but not be interactive
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> Required story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rr:"
      >
        <span
          class="text text--label-md"
        >
          Input field with fieldNote
        </span>
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        (Required)
      </span>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rt:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rt: :rs:"
        aria-invalid="false"
        class="input"
        id=":rr:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":rs:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote for a required input field.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> RequiredDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        aria-disabled="true"
        class="label label--md label--disabled input-field__label input-field__label--disabled"
        for=":ru:"
      >
        <span
          class="text text--label-md"
        >
          Input field with fieldNote
        </span>
      </label>
      <span
        aria-disabled="true"
        class="text text--body-sm input-field__required-text input-field__required-text--disabled"
      >
        (Required)
      </span>
      <div
        class="input-field__subLabel input-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":r10:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r10: :rv:"
        aria-invalid="false"
        class="input"
        disabled=""
        id=":ru:"
        required=""
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled"
        id=":rv:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote for a required input field.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> ShowHint story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1a:"
      >
        <span
          class="text text--label-md"
        >
          Field with Optional Hint
        </span>
      </label>
      <span
        class="text text--body-sm input-field__required-text"
      >
        (Optional)
      </span>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1c:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1c:"
        aria-invalid="false"
        class="input"
        id=":r1a:"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> TimeHandling story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r17:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=""
        aria-invalid="false"
        class="input"
        id=":r17:"
        type="time"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> Warning story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":rf:"
      >
        <span
          class="text text--label-md"
        >
          Warning input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rh:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":rh: :rg:"
        aria-invalid="false"
        class="input warning"
        id=":rf:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--warning"
        id=":rg:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M1.86548 20.5L12 3L22.1345 20.5H1.86548ZM12.573 17.573C12.7295 17.4167 12.8077 17.2257 12.8077 17C12.8077 16.7743 12.7295 16.5833 12.573 16.427C12.4166 16.2705 12.2256 16.1923 12 16.1923C11.7743 16.1923 11.5833 16.2705 11.427 16.427C11.2705 16.5833 11.1922 16.7743 11.1922 17C11.1922 17.2257 11.2705 17.4167 11.427 17.573C11.5833 17.7295 11.7743 17.8078 12 17.8078C12.2256 17.8078 12.4166 17.7295 12.573 17.573ZM11.25 15.1923H12.75V10.1923H11.25V15.1923Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          This uses the warning treatment and also applies to the field note
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1p:"
      >
        <span
          class="text text--label-md"
        >
          test label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1r:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1r:"
        aria-invalid="false"
        class="input error"
        id=":r1p:"
        maxlength="15"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1s:"
      >
        <span
          class="text text--label-md"
        >
          Shortened Length Field
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1u:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1u:"
        aria-invalid="false"
        class="input error"
        id=":r1s:"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithBothMaxAndRecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1v:"
      >
        <span
          class="text text--label-md"
        >
          test label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class="input-field--invalid-length"
        >
          17
        </span>
         
        / 
        15
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r21:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r21: :r20:"
        aria-invalid="false"
        class="input error"
        id=":r1v:"
        maxlength="20"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note field-note--error"
        id=":r20:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12.573 16.4962C12.7295 16.3397 12.8078 16.1487 12.8078 15.923C12.8078 15.6973 12.7295 15.5063 12.573 15.35C12.4167 15.1937 12.2257 15.1155 12 15.1155C11.7743 15.1155 11.5833 15.1937 11.427 15.35C11.2705 15.5063 11.1923 15.6973 11.1923 15.923C11.1923 16.1487 11.2705 16.3397 11.427 16.4962C11.5833 16.6526 11.7743 16.7307 12 16.7307C12.2257 16.7307 12.4167 16.6526 12.573 16.4962ZM11.25 13.077H12.75V7.077H11.25V13.077ZM12.0018 21.5C10.6878 21.5 9.45267 21.2507 8.2965 20.752C7.14033 20.2533 6.13467 19.5766 5.2795 18.7218C4.42433 17.8669 3.74725 16.8617 3.24825 15.706C2.74942 14.5503 2.5 13.3156 2.5 12.0018C2.5 10.6878 2.74933 9.45267 3.248 8.2965C3.74667 7.14033 4.42342 6.13467 5.27825 5.2795C6.13308 4.42433 7.13833 3.74725 8.294 3.24825C9.44967 2.74942 10.6844 2.5 11.9982 2.5C13.3123 2.5 14.5473 2.74933 15.7035 3.248C16.8597 3.74667 17.8653 4.42342 18.7205 5.27825C19.5757 6.13308 20.2528 7.13833 20.7518 8.294C21.2506 9.44967 21.5 10.6844 21.5 11.9982C21.5 13.3123 21.2507 14.5473 20.752 15.7035C20.2533 16.8597 19.5766 17.8653 18.7218 18.7205C17.8669 19.5757 16.8617 20.2528 15.706 20.7518C14.5503 21.2506 13.3156 21.5 12.0018 21.5Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Longer Field Description
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithFullDescription story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r3:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r5:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r5: :r4:"
        aria-invalid="false"
        class="input"
        id=":r3:"
        type="text"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r4:"
      >
        <span
          class="text text--body-sm"
        >
          Field validation description.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r6:"
      >
        <span
          class="text text--label-md"
        >
          Default input field
        </span>
      </label>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r8:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body input-field--has-fieldNote"
    >
      <input
        aria-describedby=":r8: :r7:"
        aria-invalid="false"
        class="input"
        id=":r6:"
        type="text"
        value="Text value"
      />
    </div>
    <div
      class="input-field__footer"
    >
      <div
        class="field-note"
        id=":r7:"
      >
        <span
          class="text text--body-sm"
        >
          This is a fieldnote.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InputField /> WithinMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[384px]"
  >
    <div
      class="input-field__overline"
    >
      <label
        class="label label--md input-field__label"
        for=":r1j:"
      >
        <span
          class="text text--label-md"
        >
          Test Label
        </span>
      </label>
      <div
        class="text text--body-sm input-field__character-counter"
      >
        <span
          class=""
        >
          17
        </span>
         
        / 
        30
      </div>
      <div
        class="input-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r1l:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <div
      class="input-field__body"
    >
      <input
        aria-describedby=":r1l:"
        aria-invalid="false"
        class="input"
        id=":r1j:"
        maxlength="30"
        required=""
        type="text"
        value="Some initial text"
      />
    </div>
  </div>
</div>
`;
